RESOLVED FIXED162577
[iOS] REGRESSION (r182126): Selection highlight and handles aren’t visible with WKSelectionGranularityCharacter
https://bugs.webkit.org/show_bug.cgi?id=162577
Summary [iOS] REGRESSION (r182126): Selection highlight and handles aren’t visible wi...
mitz
Reported 2016-09-26 14:12:11 PDT
When selectionGranularity is set to WKSelectionGranularityCharacter, the selection UI is broken: the selection highlights and the selection handles are never visible.
Attachments
Avoid clipping the selection UI when it is not confined to an element (1.45 KB, patch)
2016-09-26 14:23 PDT, mitz
no flags
Avoid clipping the selection UI when it is not confined to an element (14.36 KB, patch)
2016-09-27 10:20 PDT, mitz
simon.fraser: review+
Avoid clipping the selection UI when it is not confined to an element (14.45 KB, patch)
2016-09-27 10:56 PDT, mitz
no flags
mitz
Comment 1 2016-09-26 14:13:59 PDT
mitz
Comment 2 2016-09-26 14:23:34 PDT
Created attachment 289868 [details] Avoid clipping the selection UI when it is not confined to an element
Simon Fraser (smfr)
Comment 3 2016-09-26 14:27:17 PDT
Comment on attachment 289868 [details] Avoid clipping the selection UI when it is not confined to an element I think we should go the extra mile here to add testing.
mitz
Comment 4 2016-09-27 10:20:09 PDT
Created attachment 289965 [details] Avoid clipping the selection UI when it is not confined to an element Added a test. I will need help making it run only in iOS with WebKit2.
Simon Fraser (smfr)
Comment 5 2016-09-27 10:28:06 PDT
Comment on attachment 289965 [details] Avoid clipping the selection UI when it is not confined to an element View in context: https://bugs.webkit.org/attachment.cgi?id=289965&action=review > Tools/TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl:82 > + readonly attribute object selectionRangeViewRects; Would be nice if a comment said what this returned (like "Returns an array of objects with 'left', 'top', 'width', 'height' properties"
mitz
Comment 6 2016-09-27 10:56:00 PDT
Created attachment 289980 [details] Avoid clipping the selection UI when it is not confined to an element Tried to fix failing builds.
mitz
Comment 7 2016-09-27 11:34:08 PDT
Note You need to log in before you can comment on or make changes to this bug.