[iOS] REGRESSION (r182126): Selection highlight and handles aren’t visible with WKSelectionGranularityCharacter https://bugs.webkit.org/show_bug.cgi?id=162577 <rdar://problem/28481984>

Reviewed by Simon Fraser.

Source/WebKit2:

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _uiTextSelectionRectViews]): Added this method in the WKTesting category, which
  uses UIKit internals to get the views used for the selection highlight.
* UIProcess/API/Cocoa/WKWebViewPrivate.h:

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _selectionClipRect]): When selection is not confined to a form control or
  content-editable element, return the null rect to indicate no clipping, rather than
  clipping to the empty rect at the origin.

Tools:

* DumpRenderTree/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::selectionRangeViewRects): Returns null.

* TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl: Declared new
  selectionRangeViewRects attribute.

* TestRunnerShared/UIScriptContext/UIScriptContext.h:
(WTR::UIScriptContext::jsContext): Added this public accessor.

* TestRunnerShared/UIScriptContext/UIScriptController.cpp:
(WTR::selectionRangeViewRects): Generic implementation that returns null.
* TestRunnerShared/UIScriptContext/UIScriptController.h:

* WebKitTestRunner/TestController.cpp:
(WTR::updateTestOptionsFromTestHeader): Parse the new useCharacterSelectionGranularity
  option.

* WebKitTestRunner/TestOptions.h: Added new useCharacterSelectionGranularity option.

* WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::platformCreateWebView): Set the configuration’s selectionGranularity
  property based on the new option.

* WebKitTestRunner/ios/PlatformWebViewIOS.mm:
(WTR::PlatformWebView::viewSupportsOptions): Compare selection granularity option values.

* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::selectionRangeViewRects): iOS-specific implementation that calls
  the new -[WKWebView _uiTextSelectionRectViews] and returns an array of view frame
  dictionaries.

LayoutTests:

* TestExpectations:
* editing/selection/character-granularity-rect-expected.txt: Added.
* editing/selection/character-granularity-rect.html: Added.
* platform/ios-simulator-wk2/TestExpectations:



Canonical link: https://commits.webkit.org/180563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206449 268f45cc-cd09-0410-ab3c-d52691b4dbfc