Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h
@@ -267,6 +267,8 @@ typedef NS_ENUM(NSInteger, _WKImmediateActionType) {
 - (void)didStartFormControlInteraction WK_API_AVAILABLE(ios(WK_IOS_TBA));
 - (void)didEndFormControlInteraction WK_API_AVAILABLE(ios(WK_IOS_TBA));
 
+@property (nonatomic, readonly) NSArray<UIView *> *_uiTextSelectionRectViews WK_API_AVAILABLE(ios(WK_IOS_TBA));
+
 #endif
 
 #if !TARGET_OS_IPHONE
