Tools/TestRunnerShared/UIScriptContext/UIScriptController.cpp
@@ -232,6 +232,11 @@ JSObjectRef UIScriptController::contentVisibleRect() const
     return nullptr;
 }
 
+JSObjectRef UIScriptController::selectionRangeViewRects() const
+{
+    return nullptr;
+}
+
 void UIScriptController::platformSetDidStartFormControlInteractionCallback()
 {
 }
