Tools/WebKitTestRunner/TestOptions.h
@@ -42,6 +42,7 @@ struct TestOptions {
     bool useMockScrollbars { true };
     bool needsSiteSpecificQuirks { false };
     bool ignoresViewportScaleLimits { false };
+    bool useCharacterSelectionGranularity { false };
 
     float deviceScaleFactor { 1 };
     Vector<String> overrideLanguages;
