Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm
@@ -34,6 +34,7 @@
 #import "TestController.h"
 #import "TestRunnerWKWebView.h"
 #import "UIScriptContext.h"
+#import <JavaScriptCore/JavaScriptCore.h>
 #import <UIKit/UIKit.h>
 #import <WebCore/FloatRect.h>
 #import <WebKit/WKWebViewPrivate.h>
@@ -301,6 +302,24 @@ JSObjectRef UIScriptController::contentVisibleRect() const
     
     WebCore::FloatRect rect(contentVisibleRect.origin.x, contentVisibleRect.origin.y, contentVisibleRect.size.width, contentVisibleRect.size.height);
     return m_context->objectFromRect(rect);
+}
+
+JSObjectRef UIScriptController::selectionRangeViewRects() const
+{
+    NSMutableArray *selectionRects = [[NSMutableArray alloc] init];
+    for (UIView *rectView in TestController::singleton().mainWebView()->platformView()._uiTextSelectionRectViews) {
+        if (rectView.hidden)
+            continue;
+
+        CGRect frame = rectView.frame;
+        [selectionRects addObject:@{
+            @"left": @(frame.origin.x),
+            @"top": @(frame.origin.y),
+            @"width": @(frame.size.width),
+            @"height": @(frame.size.height),
+        }];
+    }
+    return JSValueToObject(m_context->jsContext(), [JSValue valueWithObject:selectionRects inContext:[JSContext contextWithJSGlobalContextRef:m_context->jsContext()]].JSValueRef, nullptr);
 }
 
 void UIScriptController::platformSetDidStartFormControlInteractionCallback()
